<resources>
    <string name="app_name">Expense Tracker</string>
    <string name="splash_text">Track Your Expenses</string>
    <string name="add_expense">Add New Expense</string>
    <string name="enter_expense_name">Enter expense name</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_description">Enter description</string>
    <string name="save">Save</string>
</resources>