<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.home.AddItemActivity">

    <TextView
        android:id="@+id/tvAddNewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:fontFamily="@font/poppins_extra_bold"
        android:text="@string/add_expense"
        android:textColor="@color/material_dynamic_primary50"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="@dimen/_80sdp"
        app:cardCornerRadius="@dimen/_16sdp"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/enter_expense_name"
                android:inputType="text"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/enter_amount"
                android:inputType="numberDecimal"
                app:layout_constraintTop_toBottomOf="@+id/etName" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:hint="@string/enter_description"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@+id/etAmount" />

            <Button
                android:id="@+id/btnSaveItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20sdp"
                android:backgroundTint="@color/material_dynamic_primary60"
                android:paddingHorizontal="@dimen/_40sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:text="@string/save"
                android:textSize="@dimen/_14sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>